--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/check": "^0.4.1",
     "@astrojs/react": "^3.0.9",
+    "@astrojs/vercel": "^6.1.3",
     "@icons-pack/react-simple-icons": "^9.2.0",
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
